# xiaozhi-esp32-music

./: CMakeLists.txt  main.yml  sdkconfig.defaults
.github/workflows/: main.yml
main/: CMakeLists.txt  Kconfig.projbuild  application.cc
main/assets/: lang_config.h  language.json
main/assets/th-TH/: active.p3  hello.p3  language.json  welcome.p3  wifi.p3
main/audio/: audio_codec.cc  audio_codec.h  audio_service.cc
main/audio/codecs/: no_audio_codec.cc  no_audio_codec.h
main/audio/processors/: no_audio_processor.cc
main/boards/bread-compact-wifi-lcd/: bread-compact-wifi-lcd.cc  config.h
main/boards/common/: ml307_board.cc  wifi_board.cc  wifi_board.h
main/ui/: CMakeLists.txt  noto_thai_24.c  ui_main.c
